<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.lennartklein.uurtjefactuurtje.SettingsTutorialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="@dimen/margin_medium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <Button
            android:id="@+id/action_save_continue"
            android:text="@string/action_save_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
