<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.lennartklein.uurtjefactuurtje.SettingsProgramFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small">

            <EditText
                android:id="@+id/field_bank"
                android:hint="@string/field_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_save"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:ems="10"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small">

            <EditText
                android:id="@+id/field_btw"
                android:hint="@string/field_btw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_save"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:ems="10"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small">

            <EditText
                android:id="@+id/field_kvk"
                android:hint="@string/field_kvk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_save"
                android:imeOptions="actionGo"
                android:singleLine="true"
                android:ems="10"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/action_save_continue"
            android:text="@string/action_save_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>
