<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium">

    <TextView
        android:id="@+id/invoice_date"
        android:text="@string/placeholder_date_short"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/invoice_date"
        android:layout_toStartOf="@id/action_show_invoice"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/invoice_nr"
            android:text="@string/placeholder_invoice_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textColor="@color/grey"
            android:ellipsize="end" />

        <TextView
            android:text="@string/placeholder_currency"
            android:id="@+id/invoice_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/action_show_invoice"
        android:src="@drawable/ic_receipt_primary"
        android:layout_width="@dimen/list_button"
        android:layout_height="@dimen/list_button"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_circle"
        android:contentDescription="@string/image_invoice"
        android:clickable="false"/>

</RelativeLayout>