<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="nl.lennartklein.uurtjefactuurtje.AddProjectFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:text="@string/title_add_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:layout_alignParentTop="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@color/white"
            android:elevation="2dp" />

        <ScrollView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/pale"
            android:layout_below="@id/title"
            android:layout_above="@id/actions">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/field_name"
                        android:hint="@string/field_name_project"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nextFocusUp="@id/field_name"
                        android:nextFocusLeft="@id/field_name"
                        android:lineSpacingMultiplier="1.15"
                        android:paddingTop="@dimen/margin_tiny"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_save"
                        android:imeOptions="actionNext"
                        android:ems="10"
                        android:inputType="textMultiLine" />

                </android.support.design.widget.TextInputLayout>

                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/field_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:hint="@string/field_company" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/field_hour_price"
                        android:hint="@string/field_hour_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin_tiny"
                        android:singleLine="true"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_save"
                        android:imeOptions="actionGo"
                        android:ems="10"
                        android:inputType="numberDecimal|numberSigned" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/actions"
            android:gravity="end"
            android:padding="@dimen/margin_small"
            android:background="@color/white"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/action_cancel"
                android:text="@string/action_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null" />

            <Button
                android:id="@+id/action_create_project"
                android:text="@string/action_create_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>