<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:background="@color/white">

        <TextView
            android:id="@+id/project_name"
            android:text="@string/placeholder_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/action_show_project"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/margin_tiny"
            android:fontFamily="@font/lato_bold"/>

        <TextView
            android:id="@+id/project_company"
            android:text="@string/placeholder_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/project_name"
            android:layout_toStartOf="@id/action_show_project"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/greyDark" />

        <TextView
            android:id="@+id/project_last_invoice"
            android:text="@string/placeholder_date_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/project_company"
            android:layout_toStartOf="@id/action_show_project"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/action_show_project"
            android:src="@drawable/ic_chevron_right"
            android:tint="@color/secondary"
            android:layout_width="@dimen/list_button_small"
            android:layout_height="@dimen/list_button_small"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:clickable="false"/>

    </RelativeLayout>

</RelativeLayout>
